--- a/HomeWork1/style.css
+++ b/HomeWork1/style.css
@@ -2,14 +2,11 @@ body {
     background-image: linear-gradient(45deg, rgb(18, 78, 152), rgb(101, 12, 85));
     
     } 
-   
-   div {    
-    border-radius: 0px;
- }
+  
 
     .sidebar {
         background-color: rgb(18, 78, 152);
-        top: 0;
+        color : lightgreen;
     }
 
     div.navigation {
@@ -20,26 +17,28 @@ body {
     }
 
     .header{
-        margin-bottom: 5px;
-        background-image: url("banner.png");
+        margin-bottom: 10px;
+        background-image: url("picture/banner.png");
         color:white;
     }
 
     .footer {
         margin-top: 5px;
+        background-color: black;
     }
 
     .pres {
         color: whitesmoke;
+    }
+
+    .ad>img {
+        height: auto;
     }
     
     .info{
         text-shadow: #AAA;
     }
 
-    .ad {
-        background-color: rgb(101, 12, 85);
-    }
 
     .pp {
         width: 50%;
@@ -51,6 +50,10 @@ body {
         justify-content: center
     }
 
+    h3 {
+        color:blueviolet;
+    }
+
     .pp_t1 {
         width: 20%;
         shape-image-threshold: .2;
@@ -59,6 +62,10 @@ body {
         shape-outside: circle(37%);
         margin-left: 10px;
         margin-top: 10px;
+    }
+
+    a>img {
+        padding-top: 10px;
     }
 
     .text_title {
@@ -85,17 +92,10 @@ body {
 
     .text1 {
         font-size: 20px;
-        padding-left: 20px;
+        padding-left: 10px;
     }
 
-    .ad1 {
-        width: 100%;
-    }
-    .ad2 {
-        width: 100%;
-    }.ad3 {
-        width: 100%;
-    }
+
 
     .insta, .twitter, .fb, .discord {
         width: 5%;
@@ -103,14 +103,37 @@ body {
 
     .box1 {
         color: white;
+        border: solid;
     }
 
+    .ad1,.ad2,.ad3,.ad4 {
+        padding: 10px;
+    }
+    
+    .ad {
+        background-color: rgb(101, 12, 85);
+    }
     .ad>img{
         max-width: 100%;
         height: 190px;
     
     }
+    
+    .forms {
+        color: #AAA;
+    }
 
+    .logoFooter {
+        margin-top: 10px;
+    }
+
+    form>label {
+        color:white;
+    }
+
+    .sub {
+        margin-top: 10px;
+    }
     
     @media only screen and (max-width: 540px) {
         .center {
