--- a/HomeWork1/style.css
+++ b/HomeWork1/style.css
@@ -14,6 +14,7 @@ body {
         position: sticky;
         top: 0px;
         background-color: lightgray;
+        opacity: 0.7;
     }
 
     .header{
